# curl-multi-asio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindCARES.cmake
docs/: CMakeLists.txt  mainpage.md
examples/: CMakeLists.txt  Example1.cpp  Example2.cpp  Example3.cpp  Example4.cpp  Example5.cpp  Example6.cpp  Example7.cpp  Example8.cpp  Example9.cpp
include/curl-multi-asio/: Common.h  Easy.h  Error.h  Handle.h  Multi.h
include/curl-multi-asio/Detail/: ErrorCategory.h  Lifetime.h
src/: CMakeLists.txt  Easy.cpp  Handle.cpp  Multi.cpp
src/Detail/: Lifetime.cpp
