add_executable(Example1 Example1.cpp)

target_link_libraries(Example1
	PUBLIC curl-multi-asio)

add_executable(Example2 Example2.cpp)

target_link_libraries(Example2
	PUBLIC curl-multi-asio)

add_executable(Example3 Example3.cpp)

target_link_libraries(Example3
	PUBLIC curl-multi-asio)

add_executable(Example4 Example4.cpp)

target_link_libraries(Example4
	PUBLIC curl-multi-asio)

add_executable(Example5 Example5.cpp)

target_link_libraries(Example5
	PUBLIC curl-multi-asio)